src/parser.output
   0  $accept : %entry% $end

   1  program : program_declaration global_declaration_list compound_statement DOT
   2          | program_declaration compound_statement DOT

   3  global_declaration_list : global_declaration global_declaration_list
   4                          | global_declaration

   5  global_declaration : variable_declaration
   6                     | procedure_definition
   7                     | function_definition
   8                     | type_definition

   9  program_declaration : PROGRAM ID SCOLON

  10  simple_type : INTEGER
  11              | REAL
  12              | STRING
  13              | CHARACTER
  14              | BOOLEAN

  15  any_named_type : ID
  16                 | simple_type

  17  ordinal_type : INTEGER
  18               | REAL
  19               | CHARACTER
  20               | BOOLEAN

  21  any_type : ID
  22           | array_type
  23           | simple_type
  24           | reference_type

  25  array_type : ARRAY LBRA range_list RBRA OF any_named_type

  26  range_list : range COMMA range_list
  27             | range

  28  range : ICONST RANGE ICONST
  29        |

  30  variable_declaration : VAR var_declrs_or_inits

  31  var_declrs_or_inits : declr_or_init SCOLON var_declrs_or_inits
  32                      | declr_or_init SCOLON

  33  declr_or_init : var_declr
  34                | var_init

  35  var_declr : id_list COLON any_type

  36  var_init : id_list COLON simple_type EQUAL expression
  37           | id_list COLON ID EQUAL ID

  38  procedure_definition : PROCEDURE ID LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON

  39  function_definition : FUNCTION ID LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON

  40  local_var_declrs : variable_declaration
  41                   |

  42  parameter_list : var_declr_list SCOLON var_init_list
  43                 | var_declr_list
  44                 | var_init_list
  45                 |

  46  var_declr_list : var_declr_list SCOLON var_declr
  47                 | var_declr

  48  var_init_list : var_init_list SCOLON var_init
  49                | var_init

  50  type_definition : TYPE type_definition_list

  51  type_definition_list : ID EQUAL type_body SCOLON type_definition_list
  52                       | ID EQUAL type_body SCOLON

  53  type_body : any_type
  54            | record_body
  55            | enumerate_body
  56            | exception_body

  57  record_body : RECORD fixed_field_list variant_part END
  58              | RECORD variant_part END
  59              | RECORD fixed_field_list END

  60  fixed_field_list : fixed_field SCOLON fixed_field_list
  61                   | fixed_field SCOLON

  62  fixed_field : id_list COLON any_type

  63  variant_part : CASE literal_or_enum_list COLON ordinal_type OF fixed_field_list variant_else_part END
  64               | CASE literal_or_enum_list COLON ordinal_type OF fixed_field_list END

  65  variant_else_part : ELSE fixed_field_list

  66  enumerate_body : ENUMERATE id_list END

  67  exception_body : EXCEPTION
  68                 | EXCEPTION fixed_field_list END

  69  reference_type : REF any_type

  70  statement : stmt_m
  71            | stmt_u

  72  stmt_m : IF expression THEN stmt_m ELSE stmt_m
  73         | CASE expression OF case_part_m ELSE stmt_m
  74         | CASE expression OF case_part_m END
  75         | expression ASG expression
  76         | WHILE expression DO stmt_m
  77         | BEGIN statement_list END
  78         | FOR ID ASG expression TO expression DO stmt_m
  79         | FOR ID ASG expression DOWNTO expression DO stmt_m
  80         | REPEAT stmt_m UNTIL expression
  81         | TRY stmt_m EXCEPT exception_part stmt_m
  82         | TRY stmt_m FINALLY stmt_m
  83         | TRY stmt_m EXCEPT exception_part DO stmt_m FINALLY stmt_m
  84         | RAISE ID LPAR expression_list RPAR
  85         | RAISE ID
  86         | WRITE expression_list
  87         | READ expression_list
  88         | DEC expression
  89         | INC expression
  90         | BREAK
  91         | CONTINUE
  92         | ID LPAR expression_list RPAR
  93         |

  94  stmt_u : IF expression THEN statement
  95         | IF expression THEN stmt_m ELSE stmt_u
  96         | WHILE expression DO stmt_u
  97         | FOR ID ASG expression TO expression DO stmt_u
  98         | FOR ID ASG expression DOWNTO expression DO stmt_u
  99         | CASE expression OF case_part_u ELSE stmt_u END
 100         | CASE expression OF case_part_u END
 101         | REPEAT stmt_u UNTIL expression
 102         | TRY stmt_u EXCEPT exception_part DO stmt_u
 103         | TRY stmt_u FINALLY stmt_u END
 104         | TRY stmt_u EXCEPT exception_part stmt_u FINALLY stmt_u

 105  case_part_m : literal_or_enum_list COLON stmt_m SCOLON case_part_u
 106              | literal_or_enum_list COLON stmt_m SCOLON

 107  case_part_u : literal_or_enum_list COLON stmt_u SCOLON case_part_u
 108              | literal_or_enum_list COLON stmt_u SCOLON

 109  literal_or_enum : literal
 110                  | ID

 111  literal : ICONST
 112          | RCONST
 113          | BCONST
 114          | SCONST
 115          | CCONST

 116  literal_or_enum_list : literal_or_enum literal_or_enum_list
 117                       | literal_or_enum

 118  exception_part : id_list
 119                 | id_list AS ID

 120  id_list : id_list COMMA ID
 121          | ID

 122  compound_statement : BEGIN statement_list END

 123  statement_list : statement
 124                 | statement_list SCOLON statement

 125  expression : expression GT expression
 126             | expression LT expression
 127             | expression EQUAL expression
 128             | expression GTEQ expression
 129             | expression LTEQ expression
 130             | expression NOTEQ expression
 131             | expression ADD expression
 132             | expression SUB expression
 133             | expression OR expression
 134             | expression MUL expression
 135             | expression DIV expression
 136             | expression MOD expression
 137             | expression AND expression
 138             | NOT expression
 139             | GETREF expression
 140             | DEREF expression
 141             | literal
 142             | ID
 143             | NIL
 144             | LPAR expression RPAR
 145             | ID LBRA expression_list RBRA
 146             | ID LPAR expression_list RPAR
 147             | expression DOT ID

 148  expression_list : expression
 149                  | expression COMMA expression_list
 150                  |

 151  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (151)

	PROGRAM  shift 3
	.  error

	program  goto 4
	program_declaration  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program_declaration : PROGRAM . ID SCOLON  (9)

	ID  shift 6
	.  error


state 4
	%entry% : '\001' program .  (151)

	.  reduce 151


state 5
	program : program_declaration . global_declaration_list compound_statement DOT  (1)
	program : program_declaration . compound_statement DOT  (2)

	FUNCTION  shift 7
	PROCEDURE  shift 8
	BEGIN  shift 9
	VAR  shift 10
	TYPE  shift 11
	.  error

	global_declaration_list  goto 12
	compound_statement  goto 13
	global_declaration  goto 14
	variable_declaration  goto 15
	procedure_definition  goto 16
	function_definition  goto 17
	type_definition  goto 18


state 6
	program_declaration : PROGRAM ID . SCOLON  (9)

	SCOLON  shift 19
	.  error


state 7
	function_definition : FUNCTION . ID LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)

	ID  shift 20
	.  error


state 8
	procedure_definition : PROCEDURE . ID LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)

	ID  shift 21
	.  error


state 9
	compound_statement : BEGIN . statement_list END  (122)
	stmt_m : .  (93)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	SCOLON  reduce 93
	END  reduce 93

	expression  goto 47
	statement  goto 48
	stmt_m  goto 49
	stmt_u  goto 50
	statement_list  goto 51
	literal  goto 52


state 10
	variable_declaration : VAR . var_declrs_or_inits  (30)

	ID  shift 53
	.  error

	var_declrs_or_inits  goto 54
	declr_or_init  goto 55
	var_declr  goto 56
	var_init  goto 57
	id_list  goto 58


state 11
	type_definition : TYPE . type_definition_list  (50)

	ID  shift 59
	.  error

	type_definition_list  goto 60


state 12
	program : program_declaration global_declaration_list . compound_statement DOT  (1)

	BEGIN  shift 9
	.  error

	compound_statement  goto 61


state 13
	program : program_declaration compound_statement . DOT  (2)

	DOT  shift 62
	.  error


state 14
	global_declaration_list : global_declaration . global_declaration_list  (3)
	global_declaration_list : global_declaration .  (4)

	FUNCTION  shift 7
	PROCEDURE  shift 8
	VAR  shift 10
	TYPE  shift 11
	BEGIN  reduce 4

	global_declaration_list  goto 63
	global_declaration  goto 14
	variable_declaration  goto 15
	procedure_definition  goto 16
	function_definition  goto 17
	type_definition  goto 18


state 15
	global_declaration : variable_declaration .  (5)

	.  reduce 5


state 16
	global_declaration : procedure_definition .  (6)

	.  reduce 6


state 17
	global_declaration : function_definition .  (7)

	.  reduce 7


state 18
	global_declaration : type_definition .  (8)

	.  reduce 8


state 19
	program_declaration : PROGRAM ID SCOLON .  (9)

	.  reduce 9


state 20
	function_definition : FUNCTION ID . LPAR parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)

	LPAR  shift 64
	.  error


state 21
	procedure_definition : PROCEDURE ID . LPAR parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)

	LPAR  shift 65
	.  error


state 22
	literal : ICONST .  (111)

	.  reduce 111


state 23
	literal : RCONST .  (112)

	.  reduce 112


state 24
	literal : BCONST .  (113)

	.  reduce 113


state 25
	literal : CCONST .  (115)

	.  reduce 115


state 26
	literal : SCONST .  (114)

	.  reduce 114


state 27
	stmt_m : ID . LPAR expression_list RPAR  (92)
	expression : ID .  (142)
	expression : ID . LBRA expression_list RBRA  (145)
	expression : ID . LPAR expression_list RPAR  (146)

	LPAR  shift 66
	LBRA  shift 67
	ADD  reduce 142
	SUB  reduce 142
	MUL  reduce 142
	DIV  reduce 142
	MOD  reduce 142
	ASG  reduce 142
	GT  reduce 142
	LT  reduce 142
	EQUAL  reduce 142
	NOTEQ  reduce 142
	GTEQ  reduce 142
	LTEQ  reduce 142
	DOT  reduce 142
	OR  reduce 142
	AND  reduce 142


state 28
	expression : LPAR . expression RPAR  (144)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 69
	literal  goto 52


state 29
	expression : GETREF . expression  (139)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 70
	literal  goto 52


state 30
	expression : DEREF . expression  (140)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 71
	literal  goto 52


state 31
	stmt_m : BEGIN . statement_list END  (77)
	stmt_m : .  (93)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	SCOLON  reduce 93
	END  reduce 93

	expression  goto 47
	statement  goto 48
	stmt_m  goto 49
	stmt_u  goto 50
	statement_list  goto 72
	literal  goto 52


state 32
	stmt_m : FOR . ID ASG expression TO expression DO stmt_m  (78)
	stmt_m : FOR . ID ASG expression DOWNTO expression DO stmt_m  (79)
	stmt_u : FOR . ID ASG expression TO expression DO stmt_u  (97)
	stmt_u : FOR . ID ASG expression DOWNTO expression DO stmt_u  (98)

	ID  shift 73
	.  error


state 33
	stmt_m : WHILE . expression DO stmt_m  (76)
	stmt_u : WHILE . expression DO stmt_u  (96)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 74
	literal  goto 52


state 34
	stmt_m : REPEAT . stmt_m UNTIL expression  (80)
	stmt_u : REPEAT . stmt_u UNTIL expression  (101)
	stmt_m : .  (93)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	UNTIL  reduce 93

	expression  goto 47
	stmt_m  goto 75
	stmt_u  goto 76
	literal  goto 52


state 35
	stmt_m : IF . expression THEN stmt_m ELSE stmt_m  (72)
	stmt_u : IF . expression THEN statement  (94)
	stmt_u : IF . expression THEN stmt_m ELSE stmt_u  (95)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 77
	literal  goto 52


state 36
	stmt_m : INC . expression  (89)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 78
	literal  goto 52


state 37
	stmt_m : DEC . expression  (88)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 79
	literal  goto 52


state 38
	stmt_m : WRITE . expression_list  (86)
	expression_list : .  (150)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	SCOLON  reduce 150
	END  reduce 150
	UNTIL  reduce 150
	ELSE  reduce 150
	EXCEPT  reduce 150
	FINALLY  reduce 150

	expression  goto 80
	expression_list  goto 81
	literal  goto 52


state 39
	stmt_m : READ . expression_list  (87)
	expression_list : .  (150)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	SCOLON  reduce 150
	END  reduce 150
	UNTIL  reduce 150
	ELSE  reduce 150
	EXCEPT  reduce 150
	FINALLY  reduce 150

	expression  goto 80
	expression_list  goto 82
	literal  goto 52


state 40
	stmt_m : CASE . expression OF case_part_m ELSE stmt_m  (73)
	stmt_m : CASE . expression OF case_part_m END  (74)
	stmt_u : CASE . expression OF case_part_u ELSE stmt_u END  (99)
	stmt_u : CASE . expression OF case_part_u END  (100)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 83
	literal  goto 52


state 41
	stmt_m : BREAK .  (90)

	.  reduce 90


state 42
	stmt_m : CONTINUE .  (91)

	.  reduce 91


state 43
	stmt_m : TRY . stmt_m EXCEPT exception_part stmt_m  (81)
	stmt_m : TRY . stmt_m FINALLY stmt_m  (82)
	stmt_m : TRY . stmt_m EXCEPT exception_part DO stmt_m FINALLY stmt_m  (83)
	stmt_u : TRY . stmt_u EXCEPT exception_part DO stmt_u  (102)
	stmt_u : TRY . stmt_u FINALLY stmt_u END  (103)
	stmt_u : TRY . stmt_u EXCEPT exception_part stmt_u FINALLY stmt_u  (104)
	stmt_m : .  (93)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 27
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	BEGIN  shift 31
	FOR  shift 32
	WHILE  shift 33
	REPEAT  shift 34
	IF  shift 35
	INC  shift 36
	DEC  shift 37
	WRITE  shift 38
	READ  shift 39
	CASE  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	TRY  shift 43
	NIL  shift 44
	RAISE  shift 45
	NOT  shift 46
	EXCEPT  reduce 93
	FINALLY  reduce 93

	expression  goto 47
	stmt_m  goto 84
	stmt_u  goto 85
	literal  goto 52


state 44
	expression : NIL .  (143)

	.  reduce 143


state 45
	stmt_m : RAISE . ID LPAR expression_list RPAR  (84)
	stmt_m : RAISE . ID  (85)

	ID  shift 86
	.  error


state 46
	expression : NOT . expression  (138)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	.  error

	expression  goto 87
	literal  goto 52


state 47
	stmt_m : expression . ASG expression  (75)
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : expression . DOT ID  (147)

	ADD  shift 88
	SUB  shift 89
	MUL  shift 90
	DIV  shift 91
	MOD  shift 92
	ASG  shift 93
	GT  shift 94
	LT  shift 95
	EQUAL  shift 96
	NOTEQ  shift 97
	GTEQ  shift 98
	LTEQ  shift 99
	DOT  shift 100
	OR  shift 101
	AND  shift 102
	.  error


state 48
	statement_list : statement .  (123)

	.  reduce 123


state 49
	statement : stmt_m .  (70)

	.  reduce 70


state 50
	statement : stmt_u .  (71)

	.  reduce 71


state 51
	compound_statement : BEGIN statement_list . END  (122)
	statement_list : statement_list . SCOLON statement  (124)

	SCOLON  shift 103
	END  shift 104
	.  error


state 52
	expression : literal .  (141)

	.  reduce 141


state 53
	id_list : ID .  (121)

	.  reduce 121


state 54
	variable_declaration : VAR var_declrs_or_inits .  (30)

	.  reduce 30


state 55
	var_declrs_or_inits : declr_or_init . SCOLON var_declrs_or_inits  (31)
	var_declrs_or_inits : declr_or_init . SCOLON  (32)

	SCOLON  shift 105
	.  error


state 56
	declr_or_init : var_declr .  (33)

	.  reduce 33


state 57
	declr_or_init : var_init .  (34)

	.  reduce 34


state 58
	var_declr : id_list . COLON any_type  (35)
	var_init : id_list . COLON simple_type EQUAL expression  (36)
	var_init : id_list . COLON ID EQUAL ID  (37)
	id_list : id_list . COMMA ID  (120)

	COLON  shift 106
	COMMA  shift 107
	.  error


state 59
	type_definition_list : ID . EQUAL type_body SCOLON type_definition_list  (51)
	type_definition_list : ID . EQUAL type_body SCOLON  (52)

	EQUAL  shift 108
	.  error


state 60
	type_definition : TYPE type_definition_list .  (50)

	.  reduce 50


state 61
	program : program_declaration global_declaration_list compound_statement . DOT  (1)

	DOT  shift 109
	.  error


state 62
	program : program_declaration compound_statement DOT .  (2)

	.  reduce 2


state 63
	global_declaration_list : global_declaration global_declaration_list .  (3)

	.  reduce 3


state 64
	function_definition : FUNCTION ID LPAR . parameter_list RPAR COLON any_type SCOLON local_var_declrs compound_statement SCOLON  (39)
	parameter_list : .  (45)

	ID  shift 53
	RPAR  reduce 45

	var_declr  goto 110
	var_init  goto 111
	id_list  goto 58
	parameter_list  goto 112
	var_declr_list  goto 113
	var_init_list  goto 114


state 65
	procedure_definition : PROCEDURE ID LPAR . parameter_list RPAR SCOLON local_var_declrs compound_statement SCOLON  (38)
	parameter_list : .  (45)

	ID  shift 53
	RPAR  reduce 45

	var_declr  goto 110
	var_init  goto 111
	id_list  goto 58
	parameter_list  goto 115
	var_declr_list  goto 113
	var_init_list  goto 114


state 66
	stmt_m : ID LPAR . expression_list RPAR  (92)
	expression : ID LPAR . expression_list RPAR  (146)
	expression_list : .  (150)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	RPAR  reduce 150

	expression  goto 80
	expression_list  goto 116
	literal  goto 52


state 67
	expression : ID LBRA . expression_list RBRA  (145)
	expression_list : .  (150)

	ICONST  shift 22
	RCONST  shift 23
	BCONST  shift 24
	CCONST  shift 25
	SCONST  shift 26
	ID  shift 68
	LPAR  shift 28
	GETREF  shift 29
	DEREF  shift 30
	NIL  shift 44
	NOT  shift 46
	RBRA  reduce 150

	expression  goto 80
	expression_list  goto 117
	literal  goto 52


state 68
	expression : ID .  (142)
	expression : ID . LBRA expression_list RBRA  (145)
	expression : ID . LPAR expression_list RPAR  (146)

	LPAR  shift 118
	LBRA  shift 67
	ADD  reduce 142
	SUB  reduce 142
	MUL  reduce 142
	DIV  reduce 142
	MOD  reduce 142
	ASG  reduce 142
	RPAR  reduce 142
	RBRA  reduce 142
	GT  reduce 142
	LT  reduce 142
	EQUAL  reduce 142
	NOTEQ  reduce 142
	GTEQ  reduce 142
	LTEQ  reduce 142
	SCOLON  reduce 142
	COMMA  reduce 142
	DOT  reduce 142
	END  reduce 142
	THEN  reduce 142
	UNTIL  reduce 142
	ELSE  reduce 142
	DO  reduce 142
	TO  reduce 142
	DOWNTO  reduce 142
	OF  reduce 142
	EXCEPT  reduce 142
	FINALLY  reduce 142
	OR  reduce 142
	AND  reduce 142


state 69
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : LPAR expression . RPAR  (144)
	expression : expression . DOT ID  (147)

	ADD  shift 88
	SUB  shift 89
	MUL  shift 90
	DIV  shift 91
	MOD  shift 92
	RPAR  shift 119
	GT  shift 94
	LT  shift 95
	EQUAL  shift 96
	NOTEQ  shift 97
	GTEQ  shift 98
	LTEQ  shift 99
	DOT  shift 100
	OR  shift 101
	AND  shift 102
	.  error


state 70
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : GETREF expression .  (139)
	expression : expression . DOT ID  (147)

	.  reduce 139


state 71
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : DEREF expression .  (140)
	expression : expression . DOT ID  (147)

	.  reduce 140


state 72
	stmt_m : BEGIN statement_list . END  (77)
	statement_list : statement_list . SCOLON statement  (124)

	SCOLON  shift 103
	END  shift 120
	.  error


state 73
	stmt_m : FOR ID . ASG expression TO expression DO stmt_m  (78)
	stmt_m : FOR ID . ASG expression DOWNTO expression DO stmt_m  (79)
	stmt_u : FOR ID . ASG expression TO expression DO stmt_u  (97)
	stmt_u : FOR ID . ASG expression DOWNTO expression DO stmt_u  (98)

	ASG  shift 121
	.  error


state 74
	stmt_m : WHILE expression . DO stmt_m  (76)
	stmt_u : WHILE expression . DO stmt_u  (96)
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : expression . DOT ID  (147)

	ADD  shift 88
	SUB  shift 89
	MUL  shift 90
	DIV  shift 91
	MOD  shift 92
	GT  shift 94
	LT  shift 95
	EQUAL  shift 96
	NOTEQ  shift 97
	GTEQ  shift 98
	LTEQ  shift 99
	DOT  shift 100
	DO  shift 122
	OR  shift 101
	AND  shift 102
	.  error


state 75
	stmt_m : REPEAT stmt_m . UNTIL expression  (80)

	UNTIL  shift 123
	.  error


state 76
	stmt_u : REPEAT stmt_u . UNTIL expression  (101)

	UNTIL  shift 124
	.  error


state 77
	stmt_m : IF expression . THEN stmt_m ELSE stmt_m  (72)
	stmt_u : IF expression . THEN statement  (94)
	stmt_u : IF expression . THEN stmt_m ELSE stmt_u  (95)
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : expression . DOT ID  (147)

	ADD  shift 88
	SUB  shift 89
	MUL  shift 90
	DIV  shift 91
	MOD  shift 92
	GT  shift 94
	LT  shift 95
	EQUAL  shift 96
	NOTEQ  shift 97
	GTEQ  shift 98
	LTEQ  shift 99
	DOT  shift 100
	THEN  shift 125
	OR  shift 101
	AND  shift 102
	.  error


state 78
	stmt_m : INC expression .  (89)
	expression : expression . GT expression  (125)
	expression : expression . LT expression  (126)
	expression : expression . EQUAL expression  (127)
	expression : expression . GTEQ expression  (128)
	expression : expression . LTEQ expression  (129)
	expression : expression . NOTEQ expression  (130)
	expression : expression . ADD expression  (131)
	expression : expression . SUB expression  (132)
	expression : expression . OR expression  (133)
	expression : expression . MUL expression  (134)
	expression : expression . DIV expression  (135)
	expression : expression . MOD expression  (136)
	expression : expression . AND expression  (137)
	expression : expression . DOT ID  (147)

	ADD  shift 88
	SUB  shift 89
	MUL  shift 90
	DIV  shift 91
	MOD  shift 92
	GT  shift 94
	LT  shift 95
	EQUAL  shift 96
	NOTEQ  shift 97
	GTEQ  shift 98
	LTEQ  shift 99
	DOT  shift 100
	OR  shift 101
	AND  shift 102
	SCOLON  reduce 89
	END  reduce 89
	UNTIL  reduce 89
	ELSE  reduce 89
	EXCEPT  reduce 89
	FINALLY  reduce 89

